--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <tfoot>
       <tr>
-        <td id="today" colspan="7"><button>今年の今月へ</button></td>
+        <td id="today" colspan="7"><button>ToDay</button></td>
       </tr>
     </tfoot>
   </table>
